# email-mcp-service

./: .dockerignore  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CHANGELOG_ATOMIC.md  CLAUDE.md  COMMANDS.md  CORRECT_N8N_ARCHITECTURE.md  CRITICAL_FIXES.md  DEDUPLICATION_FIX.md  Dockerfile  Dockerfile.optimized  EMAIL_ID_FIX.md  FINAL_REVIEW_CHECKLIST.md  FIX_SUMMARY.md  HTTP_API_QUICK_START.md  HYBRID_MODE.md  IMPROVEMENTS_SUMMARY.md  LICENSE  N8N_EMAIL_MONITORING_GUIDE.md  OPTIMIZATION_REPORT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_N8N_SETUP.md  README.en.md  README.md  README.zh.md  SECURITY_SETUP_GUIDE.md  SKILL.md  START_HERE.md  SYNC_ARCHITECTURE.md  SYNC_STATUS_FIX.md  SYNC_VERIFICATION_GUIDE.md  TRANSLATION_WORKFLOW_SUMMARY.md  TROUBLESHOOTING.md  ai_filter_config.json  check_sync_processes.py  email_monitor_config.json  email_sync.db  (+26 more)
.github/: FUNDING.yml
.smithery/: smithery_wrapper.py
config_templates/: ai_filter_config.example.json  daily_digest_config.example.json  email_monitor_config.example.json  env.example  env.n8n.example  notification_config.example.json
docker/: Dockerfile.optimized  Dockerfile.optional  README.md
docs/: AI_SKILL_MAILBOX_CLI.md  ARCHITECTURE.md  ATOMIC_OPERATIONS_UPGRADE.md  CLEANUP_SUMMARY.md  CLI_JSON_CONTRACT.md  CONNECTION_POOL_FIX.md  CRITICAL_FIXES_20251022.md  CRITICAL_FIXES_SUPPLEMENT.md  EMAIL_DISPLAY_FORMATS.md  EMAIL_LIST_FORMAT.md  LEGACY_PYTHON.md  NODE_REWRITE_PLAN.md  PATH_CONSISTENCY_FIX.md  README.md  REFACTORING_SUMMARY.md  RELEASING.md  SYNC_IMPROVEMENTS.md  tasks.md  (+3 more)
(+193 files in other folders)
